fixed flex:gap issues

--- a/css/style.css
+++ b/css/style.css
@@ -35,10 +35,18 @@
 }
 
 #player-info {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    margin: 20px;
-    gap: 110px;
+    margin: 50px;
+    /* gap: 110px; */
     font-family: 'Inconsolata';
+}
+#right {
+margin-right: 40px;
+}
+#left {
+    margin-left: 40px;
 }
 #score-board {
     margin: 20px;
